[package]
name = "bollox"
version = "0.1.0"
authors = ["Martin Junghanns <nerdfaktor42@mailbox.org>"]
edition = "2021"

[dependencies]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = true
rpath = false
strip = true

[profile.bench]
debug = true